--- a/index.html
+++ b/index.html
@@ -13,26 +13,45 @@
         <div class="character-sheet">
             <div class="main-column">
                 <section class="agent-info">
-                    <div class="agent-field">
-                        <label for="character-name">Nome</label>
-                        <select id="character-name">
-                            <option value="Nikolai">Nikolai</option>
-                            <option value="Math">Math</option>
-                            <option value="Gl1tch">Gl1tch</option>
-                            <option value="Malta">Malta</option>
-                            <option value="Fuzuki">Fuzuki</option>
-                            <option value="Alfred">Alfred</option>
-                            <option value="Higuruma">Higuruma</option>
-                        </select>
-                    </div>
-                    <div class="level-nex-container">
-                        <div class="level-field">
-                            <label for="level">Nível</label>
-                            <input type="number" id="level" min="1" max="20" value="1">
+                    <div class="agent-grid">
+                        <div class="agent-field">
+                            <label for="character-name">Nome</label>
+                            <select id="character-name">
+                                <option value="">Selecione um personagem</option>
+                                <option value="Nikolai">Nikolai</option>
+                                <option value="Math">Math</option>
+                                <option value="Gl1tch">Gl1tch</option>
+                                <option value="Malta">Malta</option>
+                                <option value="Fuzuki">Fuzuki</option>
+                                <option value="Alfred">Alfred</option>
+                                <option value="Higuruma">Higuruma</option>
+                            </select>
                         </div>
-                        <div class="nex-field">
-                            <label for="nex">NEX</label>
-                            <input type="number" id="nex" min="0" max="99" value="0">
+                        
+                        <div class="level-nex-group">
+                            <div class="agent-field">
+                                <label for="level">Nível</label>
+                                <input type="number" id="level" min="1" max="20" value="1">
+                            </div>
+                            <div class="agent-field">
+                                <label for="nex">NEX</label>
+                                <input type="number" id="nex" min="0" max="99" value="0">
+                            </div>
+                        </div>
+
+                        <div class="agent-field">
+                            <label for="origin">Origem</label>
+                            <input type="text" id="origin">
+                        </div>
+
+                        <div class="agent-field">
+                            <label for="class">Classe/Trilha</label>
+                            <input type="text" id="class">
+                        </div>
+
+                        <div class="agent-field">
+                            <label for="money">Dinheiro</label>
+                            <input type="number" id="money" min="0" step="0.01" value="0">
                         </div>
                     </div>
                 </section>
