--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <h2>Estatísticas</h2>
                     <div class="stat-bars">
                         <div class="stat-container">
-                            <label>PV (Pontos de Vida)</label>
+                            <label>PV - Pontos de Vida</label>
                             <div class="stat-values">
                                 <input type="number" id="pv-current" min="0" value="0" placeholder="Atual">
                                 <span>/</span>
@@ -71,7 +71,7 @@
                             </div>
                         </div>
                         <div class="stat-container">
-                            <label>PE (Pontos de Esforço)</label>
+                            <label>PE - Pontos de Esforço</label>
                             <div class="stat-values">
                                 <input type="number" id="pe-current" min="0" value="0" placeholder="Atual">
                                 <span>/</span>
@@ -82,7 +82,7 @@
                             </div>
                         </div>
                         <div class="stat-container">
-                            <label>SAN (Sanidade)</label>
+                            <label>SAN - Sanidade</label>
                             <div class="stat-values">
                                 <input type="number" id="san-current" min="0" value="0" placeholder="Atual">
                                 <span>/</span>
